# Personal-Finance-Tracker

./: .gitignore  CMakeLists.txt  README.md
database/: schema.sql
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md
scripts/: build.sh
src/: main  main.cpp
src/application/services/: BudgetService.cpp  BudgetService.h  FinanceManager.cpp  FinanceManager.h  ReportService.cpp  ReportService.h
src/domain/entities/: Budget.h  Expense.h  Income.h  Transaction.h  User.h
src/domain/factories/: TransactionFactory.cpp  TransactionFactory.h
src/domain/repositories/: IBudgetRepository.h  ITransactionRepository.h  IUserRepository.h
src/domain/strategies/: IReportStrategy.h
src/domain/value_objects/: Date.h  Money.h
src/infrastructure/database/: EnvLoader.cpp  EnvLoader.h  IDatabaseConnection.h  PostgresConnection.cpp  PostgresConnection.h  database.env
src/infrastructure/repositories/: PostgresBudgetRepository.cpp  PostgresBudgetRepository.h  PostgresTransactionRepository.cpp  PostgresTransactionRepository.h  PostgresUserRepository.cpp  PostgresUserRepository.h
src/infrastructure/strategies/: CsvReportStrategy.h
src/presentation/: CLI.cpp  CLI.h
src/tests/: SystemTests.cpp  SystemTests.h
